--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
    crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-color:rgb(29, 28, 28);">
   <app-root></app-root>
 </body>
 </html>
